[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/base.tres" type="Theme" id=1]
[ext_resource path="res://scripts/base/title/title.gd" type="Script" id=2]
[ext_resource path="res://scenes/base/title/profile/profile.tscn" type="PackedScene" id=3]



[node name="title_scene" type="Control"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
web_link_url = "https://your_website.something"

[node name="Start_Menu" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_right = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="Start_Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 89.0
margin_bottom = 473.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Title" type="Label" parent="Start_Menu/VBC"]
margin_right = 82.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "game title"
align = 1
uppercase = true

[node name="HSeparator_1" type="HSeparator" parent="Start_Menu/VBC"]
margin_top = 18.0
margin_right = 82.0
margin_bottom = 22.0
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Start_Menu/VBC"]
margin_top = 26.0
margin_right = 82.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Start_Menu/VBC/HBoxContainer"]
margin_right = 69.0
margin_bottom = 14.0
text = "Welcome, "

[node name="Profile" type="LinkButton" parent="Start_Menu/VBC/HBoxContainer"]
margin_left = 73.0
margin_right = 73.0
margin_bottom = 14.0
focus_mode = 2

[node name="HSeparator_2" type="HSeparator" parent="Start_Menu/VBC"]
margin_top = 44.0
margin_right = 82.0
margin_bottom = 48.0

[node name="Continue" type="Button" parent="Start_Menu/VBC"]
margin_top = 52.0
margin_right = 82.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "Continue"

[node name="New_Game" type="Button" parent="Start_Menu/VBC"]
margin_top = 76.0
margin_right = 82.0
margin_bottom = 96.0
theme = ExtResource( 1 )
text = "New Game"

[node name="Settings" type="Button" parent="Start_Menu/VBC"]
margin_top = 100.0
margin_right = 82.0
margin_bottom = 120.0
theme = ExtResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Start_Menu/VBC"]
margin_top = 124.0
margin_right = 82.0
margin_bottom = 144.0
theme = ExtResource( 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Start_Menu/VBC"]
margin_top = 148.0
margin_right = 82.0
margin_bottom = 168.0
theme = ExtResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator_3" type="HSeparator" parent="Start_Menu/VBC"]
margin_top = 172.0
margin_right = 82.0
margin_bottom = 176.0

[node name="Developer_LinkButton" type="LinkButton" parent="Start_Menu/VBC"]
margin_top = 180.0
margin_right = 82.0
margin_bottom = 194.0
focus_mode = 2
theme = ExtResource( 1 )
enabled_focus_mode = 2
text = "Visit website"

[node name="profile" parent="." instance=ExtResource( 3 )]
